# slambook_practice

./: .gitignore
bundleAdjustment/: CMakeLists.txt  SnavelyReprojectionError.h  bundleAdjustmentCeres.cpp  bundleAdjustmentG2o.cpp  common.cpp  common.h  final.ply  initial.ply  random.h  rotation.h
ceresCureFitting/: CMakeLists.txt  ceresCurveFitting.cpp
coordinateTransformation/: coordinateTransformation.cpp
denseMapping/: CMakeLists.txt  denseMono.cpp  pointCloudMapping.cpp
directMethod/: CMakeLists.txt  directMethod.cpp
drawTrajectory/: CMakeLists.txt  drawTrajectory.cpp
estimateTrajectoryError/: CMakeLists.txt  estimateTrajectoryError.cpp
g2oCurveFitting/: CMakeLists.txt  g2oCurveFitting.cpp
gaussNewton/: CMakeLists.txt  gaussNewton.cpp
opticalFlow/: CMakeLists.txt  opticalFlow.cpp
orbOpenCV/: CMakeLists.txt  orbOpenCV.cpp  orbSelf.cpp
poseEstimation/: CMakeLists.txt  poseEstimation2d2d.cpp  poseEstimation3d2d.cpp  poseEstimation3d3d.cpp  triangulation.cpp
poseGraphG2O/: CMakeLists.txt  poseGraphG2OLieAlgebra.cpp  poseGraphG2OSE3.cpp
rgbdVision/: CMakeLists.txt  rgbdVision.cpp
stereoVision/: CMakeLists.txt  stereoVision.cpp
trainVocabulary/: CMakeLists.txt  calculateDifference.cpp  trainVocabulary.cpp
undistortImage/: CMakeLists.txt  undistortImage.cpp
useEigen/: use_eigen.cpp
useEigenGeometry/: useEigenGeometry.cpp
useSophus/: CMakeLists.txt  useSophus.cpp
